--- a/style.css
+++ b/style.css
@@ -2,8 +2,70 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.5;
 }
 
-h1 {
-  padding: 20px;
+html, body, main {
+  height: 100%;
 }
+
+nav {
+  border: 1px solid blue;
+}
+
+/* --- TEXT Formatting ---*/
+
+a {text-decoration: none;}
+.btn h1 {font-size: 14px;}
+
+
+/* --- Home Page ---*/
+.container {
+  border: 1px solid red;  
+  display: flex;
+  align-items: stretch;
+}
+
+.pimg1 {
+  background-image: url(./images/Poke.jpg);
+  min-height: 40%;
+  position: relative;
+  opacity: 0.70;
+  background-position: left top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+}
+
+.left {
+  border: 1px solid green;
+  margin-left: 3%;
+  min-width: 225px;
+  width: 50%;
+}
+
+.logo img {
+  width: 100%;
+  margin-top: 5%;
+  margin-bottom: 20%;
+}
+
+.btn-container {
+  border: 1px solid orange;
+  margin-left: 5%;
+}
+
+.btn-container :not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.btn {
+  width: fit-content;
+  border: 2px solid rgb(62,169,159,255);
+  padding: 10px;
+  color: rgb(62,169,159,255);
+  background: transparent;
+}
+
+
