--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ a:visited {color:rgb(62,169,159,255)!important;}
 }
 
 /* --- Modifiers ----*/
-.dark-bg {background-color:rgb(107, 202, 193);}
-.light-text{color: rgb(236, 234, 234);}
+.hide {display: none;}
 .darker-text {color:rgb(121, 119, 119);}
 .feature p {
   font-size: 28px;
@@ -64,6 +63,32 @@ a:visited {color:rgb(62,169,159,255)!important;}
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+/* -- Hamberger Menu --*/
+.menu-icon {
+  display:block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: rgb(62,169,159,255);
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 
 /*--- Button Styling ---*/
@@ -101,14 +126,12 @@ a:visited {color:rgb(62,169,159,255)!important;}
 
 /* --- Home Page ---*/
 .home-container {
-  border: 1px solid red;  
   display: flex;
   align-items: stretch;
   margin-top: 60px;
 }
 
 .left {
-  border: 1px solid green;
   margin-left: 3%;
   min-width: 225px;
   width: 50%;
@@ -121,7 +144,6 @@ a:visited {color:rgb(62,169,159,255)!important;}
 }
 
 .btn-container {
-  border: 1px solid orange;
   margin-left: 5%;
 }
 
