--- a/style.css
+++ b/style.css
@@ -22,9 +22,15 @@ nav{
   box-shadow: 0px 3px 10px rgb(117, 113, 113);
 }
 
+nav li {
+  list-style: none;
+}
+
 .nav-links {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
 }
 
 .nav-links a:not(:last-child){
