--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ a:visited {color:rgb(62,169,159,255)}
 .menu-icon {
   display:block;
   cursor: pointer;
+  border: none;
+  background: transparent;
 }
 
 .bar1, .bar2, .bar3 {
@@ -137,13 +139,13 @@ a:visited {color:rgb(62,169,159,255)}
 }
 
 .pimg1 {
-  background-image: url(./images/Poke-65-Transparancy.jpg);
+  background-image: url(./images/Poke.jpg);
   min-height: 40%;
   background-position: left top;
 }
 
 .pimg2 {
-  background-image: url(./images/build-your-own-65-Transparancy.jpg);
+  background-image: url(./images/build-your-own.jpg);
   min-height: 200px;
   background-position: center center;
 }
@@ -156,7 +158,7 @@ a:visited {color:rgb(62,169,159,255)}
   margin-top: 60px;
 }
 
-.left {
+.home__content {
   margin-left: 3%;
   min-width: 225px;
   width: 50%;
@@ -315,5 +317,3 @@ textarea {
   }
 
 }
-
-
