--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.8;
   padding:0;
   margin: 0;
@@ -9,6 +8,98 @@
 
 html, body, main {
   height: 100%;
+}
+
+/* --- TEXT Formatting ---*/
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color:rgb(62,169,159,255)!important;
+}
+
+.nav-links li a {
+  font-family: 'Shadows Into Light', cursive;
+  letter-spacing: 5px;
+  font-size: 32px;
+}
+
+.btn h1 {
+  font-size: 14px;
+}
+
+.title    {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 32px;
+  letter-spacing: 3px;
+  color: #F37976;
+}
+
+.menu-sub-title {
+  font-family: 'Shadows Into Light', cursive;
+  font-size: 22px;
+  letter-spacing: 2px;
+  color: rgb(62,169,159,255);
+}
+
+.content, 
+.menu-description, 
+.rewards-description {
+  font-size: 14px;
+  color: rgb(92, 92, 92);
+}
+
+.menu-item h4 {
+  font-size: 22px;
+  font-weight: lighter;
+  color: rgb(62,169,159,255);
+}
+
+.weekly-special .menu-sub-title {
+  color: white;
+}
+
+.rewards-content .title, .newsletter-content .title {
+  font-size: 20px;
+  text-align: center;
+}
+
+/* --- Modifiers ----*/
+.hide {display: none;}
+.light-text {color: white}
+.turquoise-text {color: rgb(62,169,159,255);}
+.feature p {
+  text-align: center;
+  font-size: 36px;
+  letter-spacing: 2px;
+  color: #F37976;
+  font-family: 'Permanent Marker', cursive;
+}
+
+
+/*--- Parallax Images ---*/
+.pimg1, .pimg2 {
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+}
+
+.pimg1 {
+  background-image: url(./images/Poke.jpg);
+  min-height: 40%;
+  background-position: left top;
+}
+
+.pimg2 {
+  background-image: url(./images/build-your-own.jpg);
+  min-height: 200px;
+  background-position: center center;
 }
 
 nav{
@@ -28,6 +119,47 @@ nav li {
   margin:10px;
   color: white;
 }
+/* -- Hamberger Menu --*/
+.menu-icon {
+  display:block;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+}
+
+/*-- close menu effect ---*/
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: rgb(62,169,159,255);
+  margin: 6px 0;
+  border-radius: 8px;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+/*--- Button Styling ---*/
+
+.btn {
+  width: fit-content;
+  border: 2px solid rgb(62,169,159,255);
+  border-radius: 10px;
+  padding: 10px;
+  color: rgb(62,169,159,255);
+  background: rgba(255, 255, 255, 0.75);
+}
+
+.btn:hover {cursor: pointer;}
 
 .nav-links {
   text-align: center;
@@ -54,103 +186,6 @@ nav .nav-links.show {
   color: white !important;
 }
 
-
-/* --- TEXT Formatting ---*/
-
-a         {text-decoration: none;}
-a:visited {color:rgb(62,169,159,255)}
-.btn h1   {font-size: 14px;}
-.title    {font-size: 18px;  color: rgb(62,169,159,255);}
-.menu-sub-title {font-size: 16px;}
-.content, 
-.menu-description, 
-.rewards-description {font-size: 14px;}
-.menu-item h4 {
-  font-size: 22px;
-  font-weight: lighter;
-  color: rgb(62,169,159,255);
-}
-
-/* --- Modifiers ----*/
-.hide {display: none;}
-.darker-text {color:rgb(121, 119, 119);}
-.light-text {color: white}
-.feature p {
-  font-size: 28px;
-  font-weight: lighter;
-  color: rgb(62,169,159,255);
-}
-
-/* --- General Content Spaceing ---*/
-.about-us, .gallery-container .content {
-  margin: 40px 3% 60px 3%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-/* -- Hamberger Menu --*/
-.menu-icon {
-  display:block;
-  cursor: pointer;
-  border: none;
-  background: transparent;
-}
-
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: rgb(62,169,159,255);
-  margin: 6px 0;
-  border-radius: 8px;
-}
-
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-.change .bar2 {opacity: 0;}
-
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
-}
-
-/*--- Button Styling ---*/
-
-.btn {
-  width: fit-content;
-  border: 2px solid rgb(62,169,159,255);
-  padding: 10px;
-  color: rgb(62,169,159,255);
-  background: rgba(255, 255, 255, 0.75);
-}
-
-.btn:hover {cursor: pointer;}
-
-/*--- Parallax Images ---*/
-.pimg1, .pimg2 {
-  position: relative;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-}
-
-.pimg1 {
-  background-image: url(./images/Poke.jpg);
-  min-height: 40%;
-  background-position: left top;
-}
-
-.pimg2 {
-  background-image: url(./images/build-your-own.jpg);
-  min-height: 200px;
-  background-position: center center;
-}
-
-
 /* --- Home Page ---*/
 .home-container {
   display: flex;
@@ -161,17 +196,26 @@ a:visited {color:rgb(62,169,159,255)}
 .home__content {
   margin-left: 3%;
   min-width: 225px;
-  width: 50%;
+  width: 100%;
+}
+
+.logo {
+  width: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.801) 50%, rgba(0, 0, 0, 0));
 }
 
 .logo img {
-  width: 100%;
-  margin-top: 10%;
-  margin-bottom: 20%;
+  width: 55%;
+  max-width: 500px;
+  margin-top: 20px;
 }
 
 .btn-container {
   margin-left: 5%;
+}
+
+.btn-container .btn {
+  margin: 30px 0 15px 0;
 }
 
 .btn-container :not(:last-child) {
@@ -195,9 +239,13 @@ a:visited {color:rgb(62,169,159,255)}
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color:rgb(247, 253, 253);
   padding-top: 20px;
   padding-bottom: 40px;
+  background-color:rgb(247, 253, 253);
+}
+
+.weekly-special {
+  background-color: rgb(53, 52, 52);
 }
 
 .bowl-choice, .poke-choice, .style-choice {
@@ -218,79 +266,52 @@ a:visited {color:rgb(62,169,159,255)}
 
 /* --- Gallery Styles --*/
 
-.images img {
+.gallery-images img {
   width: 100%;
   height: auto;
 }
 
 /*--- Newsletter & Rewards ---*/
 .newsletter-rewards {
-  background-image: url(./images/go-poke03-65-Transparancy.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  padding-top: 20px;
-  padding-bottom: 40px;
-}
-
-.rewards, .newsletter {
+  background-color:rgb(247, 253, 253);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  margin-top: 30px;
-  
 }
 
 .rewards-content, .newsletter-content {
-  margin-left: 5%;
-  margin-right: 5%;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 30px 5%;
+  padding: 40px 30px;
   border: 1px solid lightgray;
   background-color: white;
+}
+
+.rewards-content :not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.newsletter-content :not(:last-child) {
+  margin-bottom: 20px;
 }
 
 /* -- newsletter sign-up form --*/
 
 label {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .newsletter-form-container {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
 }
 
-.form-container {
-  width: 90%;
-  max-width: 500px;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.form-grp {
-  width: 100%;
-  margin-top: 20px;
-  font-size: 12px;
-}
-
-.form-grp input, .form-grp textarea {
-  width: 100%;
-  margin-top: 8px;
-  padding: 10px;
-  font-size: 14px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
-}
-
-textarea {
-  resize: vertical;
+.form-grp, .form-grp input {
+  width: 100%
 }
 
 .form-style {
@@ -299,8 +320,72 @@ textarea {
 }
 
 
+
+
+@media all and (min-width: 600px) {
+  .gallery-images {
+    display: flex;
+    width: 300px;
+    justify-content:space-evenly;
+  }
+
+  .gallery-images img {
+    margin: 15px;
+  }
+
+  .rewards-content .title, .newsletter-content .title {
+    font-size: 18px;
+  }
+
+
+  .newsletter-rewards {
+    background-color:rgb(247, 253, 253);
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .rewards-content, .newsletter-content {
+    margin: 30px 5%;
+    padding: 40px;
+    border: 1px solid lightgray;
+    background-color: white;
+  }
+
+  .rewards-content {
+    min-width: 250px;
+    max-width: 400px;
+  }
+
+  .newsletter-content {
+    max-width: 600px;
+  }
+  
+  /*---form card---*/
+  .newsletter-form-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  #newsletter-form {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  #newsletter-form :not(:last-child) {
+    margin-right: 20px;
+  }
+
+  .form-grp, .form-grp #form-btn {
+    width: 50%;
+  }
+ 
+  
+}
+
 @media all and (min-width: 800px) {
-  .container, .gallery-container .content {
+  .container, .gallery-container, .about-us  {
     margin: 40px 10% 60px 10%;
     display: flex;
     flex-direction: column;
