--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body, main {
   height: 100%;
 }
 
-/* --- TEXT Formatting ---*/
+/* --- TEXT Formatting  START ---*/
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -29,7 +29,7 @@ a:visited {
   font-size: 32px;
 }
 
-.btn h1 {
+.btn h1, .rewards-btn h1 {
   font-size: 14px;
 }
 
@@ -47,7 +47,7 @@ a:visited {
   color: rgb(62,169,159,255);
 }
 
-.content, 
+.about-us .content, 
 .menu-description, 
 .rewards-description {
   font-size: 14px;
@@ -68,6 +68,7 @@ a:visited {
   font-size: 20px;
   text-align: center;
 }
+/* -- TEXT formatting END --*/
 
 /* --- Modifiers ----*/
 .hide {display: none;}
@@ -107,8 +108,21 @@ a:visited {
   min-height: 500px;
   background-position: center center;
 }
-/*---- Navigation ----*/
 
+/*--- Button Styling ---*/
+
+.btn, .rewards-btn {
+  width: fit-content;
+  border: 2px solid rgb(62,169,159,255);
+  border-radius: 10px;
+  padding: 10px;
+  color: rgb(62,169,159,255);
+  background: rgba(255, 255, 255, 0.75);
+}
+
+.btn:hover {cursor: pointer;}
+
+/*---- Navigation ----*/
 nav{
   position: fixed;
   top:0;
@@ -126,7 +140,7 @@ nav li {
   margin:10px;
   color: white;
 }
-/* -- Hamberger Menu --*/
+
 .menu-icon {
   display:block;
   cursor: pointer;
@@ -154,19 +168,6 @@ nav li {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px);
 }
-
-/*--- Button Styling ---*/
-
-.btn {
-  width: fit-content;
-  border: 2px solid rgb(62,169,159,255);
-  border-radius: 10px;
-  padding: 10px;
-  color: rgb(62,169,159,255);
-  background: rgba(255, 255, 255, 0.75);
-}
-
-.btn:hover {cursor: pointer;}
 
 .nav-links {
   text-align: center;
@@ -275,14 +276,6 @@ nav .nav-links.show {
 }
 
 
-
-/* --- Gallery Styles --*/
-
-.gallery-images img {
-  width: 100%;
-  height: auto;
-}
-
 /*--- Newsletter & Rewards ---*/
 .newsletter-rewards {
   background-color:rgb(247, 253, 253);
@@ -335,6 +328,10 @@ label {
 
 
 @media all and (min-width: 600px) {
+  .nav-links {
+    width: 50%;
+  }
+
   .about-us {
     min-height: 400px;
   }
@@ -405,6 +402,10 @@ label {
 @media all and (min-width: 800px) {
   /*--text re-sizing--*/
   .btn h1 {font-size: 24px;}
+
+  .nav-links {
+    width: 25%;
+  }
 
   .pimg1, .pimg2, .pimg3 {
     background-attachment: fixed;
