--- a/style.css
+++ b/style.css
@@ -11,17 +11,12 @@ html, body, main {
 }
 
 /* --- TEXT Formatting  START ---*/
-body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+body    {font-family: Verdana, Geneva, Tahoma, sans-serif;}
+a       {text-decoration: none;}
 
-a {
-  text-decoration: none;
-}
+a:visited   {color:rgb(62,169,159,255)!important;}
 
-a:visited {
-  color:rgb(62,169,159,255)!important;
-}
+.btn h1, .rewards-btn h1  {font-size: 14px;}
 
 .nav-links li a {
   font-family: 'Shadows Into Light', cursive;
@@ -29,11 +24,7 @@ a:visited {
   font-size: 32px;
 }
 
-.btn h1, .rewards-btn h1 {
-  font-size: 14px;
-}
-
-.title    {
+.title  {
   font-family: 'Shadows Into Light', cursive;
   font-size: 32px;
   letter-spacing: 3px;
@@ -74,7 +65,7 @@ a:visited {
 .hide {display: none;}
 .light-text {color: white}
 .turquoise-text {color: rgb(62,169,159,255);}
-.feature p {
+.feature {
   text-align: center;
   font-size: 36px;
   letter-spacing: 2px;
@@ -237,12 +228,11 @@ nav .nav-links.show {
 }
 
 .about-us .title {
-  margin-bottom: 10px;
+  padding: 40px 0 10px 0;
 }
 
 .about-us .content p {
-  padding: 5px;
-  margin:5px;
+  padding: 0 20px 60px 20px;
   text-align: center;
 }
 
@@ -260,14 +250,21 @@ nav .nav-links.show {
 .weekly-special {
   background-color: rgb(53, 52, 52);
 }
+.menu-choices {
+  margin-top: 20px;
+  width:90%;
+}
 
 .bowl-choice, .poke-choice, .style-choice {
   text-align: center;
-  margin: 10px 5% 30px 5%;
   padding: 15px;
   background-color: white;
   border-radius: 8px;
   border: 1px solid lightgray;
+}
+
+.bowl-choice, .poke-choice {
+  margin: 10px 0 30px 0;
 }
 
 .menu-sub-title, .menu-description {
@@ -328,6 +325,12 @@ label {
 
 
 @media all and (min-width: 600px) {
+  /*-- TEXT resizing --*/
+  .about-us .content, 
+  .rewards-description {
+    font-size: 16px;
+  }
+
   .nav-links {
     width: 50%;
   }
@@ -343,7 +346,7 @@ label {
   .gallery-images {
     display: flex;
     width: 300px;
-    justify-content:space-evenly;
+    justify-content:space-between
   }
 
   .gallery-images img {
@@ -401,30 +404,18 @@ label {
 
 @media all and (min-width: 800px) {
   /*--text re-sizing--*/
-  .btn h1 {font-size: 24px;}
+  .btn h1     {font-size: 24px;}
 
-  .nav-links {
-    width: 25%;
-  }
+  .nav-links  {width: 25%;}
 
-  .pimg1, .pimg2, .pimg3 {
-    background-attachment: fixed;
-  }
+  .pimg1, .pimg2, .pimg3  {background-attachment: fixed;}
+  .pimg2  {min-height: 500px;}
+  .pimg3  {min-height: 500px;}
 
   .pimg1 {
     min-height: 90%;
     background-position: center top;
   }
-
-  .pimg2 {
-    min-height: 500px;
-  }
-
-  .pimg3 {
-    min-height: 500px;
-  }
-
- 
 
   .home__content {
     margin-left: 5%;
@@ -451,13 +442,31 @@ label {
     display: flex;
   }
   
-  .btn-container .btn {
-    margin: 0;
-  }
+  .btn-container .btn  {margin: 0;}
   
   .btn-container :not(:last-child) {
     margin-bottom:0;
     margin-right: 60px;
   }
+
+  
+  
+
+  .bowl-choice {
+    min-width: 350px; 
+    max-width: 400px;
+    max-height: 450px;
+    margin-top:0;
+    margin-right: 40px;
+    
+  }
+  .poke-choice {
+    min-width: 350px;
+    max-height: 300px;
+    margin-top: 0;
+    margin-right: 40px;
+  }
+  .style-choice {min-width: 350px; max-width: 450px;}
+
 
 }
