--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ nav li {
   transition: .5s all ease-in-out;
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 90%;
   top: 60px;
   background-color: rgb(62,169,159,255);
   left: -100%;
