--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ a:visited   {color:rgb(62,169,159,255)!important;}
 /*--- Button Styling ---*/
 
 .btn, .rewards-btn {
-  width: fit-content;
+  width: 115px;
   border: 2px solid rgb(62,169,159,255);
   border-radius: 10px;
   padding: 10px;
@@ -467,6 +467,10 @@ label {
     margin-top:0;
   }
   
+  .btn, .rewards-btn {
+    width: 180px;
+  }
+
   .btn-container {
     margin-left: 5%;
     display: flex;
