--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ a:visited   {color:rgb(62,169,159,255)!important;}
 }
 
 .order-btn, .points-btn, .sign-up-btn {width: 115px;}
+.rewards-btn {width: 150px;}
 
 
 .order-btn, .points-btn, .rewards-btn, .sign-up-btn:hover {cursor: pointer;}
@@ -228,7 +229,7 @@ nav .nav-links.show {
   margin-left: 5%;
 }
 
-.btn-container .btn {
+.btn-container .order-btn, .btn-container .points-btn {
   margin: 30px 0 15px 0;
 }
 
