--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ a:visited   {color:rgb(62,169,159,255)!important;}
   font-size: 20px;
   text-align: center;
 }
+/*-newsletter form-*/
+label {
+  font-size: 14px;
+}
 /* -- TEXT formatting END --*/
 
 /* --- Modifiers ----*/
@@ -232,12 +236,9 @@ nav .nav-links.show {
   margin-left: 5%;
 }
 
-.btn-container .order-btn, .btn-container .points-btn {
-  margin: 30px 0 15px 0;
-}
-
-.btn-container :not(:last-child) {
-  margin-bottom: 20px;
+.order-btn {
+  margin-top: 30px;
+  margin-bottom: 20px
 }
 
 /*--- About Us ---*/
@@ -335,11 +336,6 @@ nav .nav-links.show {
 }
 
 /* -- newsletter sign-up form --*/
-
-label {
-  font-size: 14px;
-}
-
 .newsletter-form-container {
   display: flex;
   flex-direction: column;
@@ -485,11 +481,10 @@ label {
     display: flex;
   }
   
-  .btn-container .btn  {margin: 0;}
   
-  .btn-container :not(:last-child) {
-    margin-bottom:0;
-    margin-right: 60px;
+  .order-btn {
+    margin-bottom: 0;
+    margin-right: 60px
   }
 
   .bowl-choice {
