--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body, main {
 
 /* --- TEXT Formatting  START ---*/
 body    {font-family: Verdana, Geneva, Tahoma, sans-serif;}
-a       {text-decoration: none;}
+a       {text-decoration: none; color:rgb(62,169,159,255)}
 
 a:visited   {color:rgb(62,169,159,255)!important;}
 
@@ -56,7 +56,7 @@ a:visited   {color:rgb(62,169,159,255)!important;}
 .menu-description, 
 .rewards-description {
   font-size: 14px;
-  color: rgb(92, 92, 92);
+  color: rgb(82, 81, 81);
 }
 
 .menu-item h4 {
@@ -303,7 +303,7 @@ nav .nav-links.show {
 .poke-choice, 
 .style-choice {
   text-align: center;
-  padding: 15px;
+  padding: 20px;
   background-color: white;
   border-radius: 8px;
   border: 1px solid lightgray;
@@ -492,14 +492,14 @@ nav .nav-links.show {
 
   .bowl-choice {
     width: 375px;
-    max-height: 450px;
+    max-height: 500px;
     margin-top:0;
     
   }
 
   .poke-choice {
     min-width: 350px;
-    max-height: 300px;
+    max-height: 400px;
     margin-top: 0;
     
   }
