--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ label {
 /* -- TEXT formatting END --*/
 
 /* --- Modifiers ----*/
+.hide {display: none}
 .salmon-text {color: #F37976 !important;}
 .feature {
   text-align: center;
@@ -364,6 +365,22 @@ nav .nav-links.show {
 .form-style {
   border: 1px solid lightgray;
   outline: none;
+}
+
+.success {
+  text-align: center;
+  background-color: darkgreen;
+  color: white;
+  width: 100%;
+  padding: 15px;
+}
+
+.error {
+  text-align: center;
+  background-color: darkred;
+  color: white;
+  width: 100%;
+  padding: 15px;
 }
 
 /*--- Footer Styling ---*/
